# Meridian

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  GETTING-STARTED.md  LICENSE  README.md  SPEC.md  STATUS.md  fly.toml
.github/workflows/: ci.yml  deploy.yml
agents/: 00-project-manager.md  01-quant-domain-validator.md  02-market-microstructure-engineer.md  03-engine-developer.md  04-frontend-developer.md  05-ui-ux-designer.md  08-security-engineer.md  09-devops-engineer.md  10-qa-engineer.md  11-code-reviewer.md  12-performance-engineer.md  13-accessibility-specialist.md  14-observability-engineer.md  15-documentation-engineer.md  16-risk-correctness-reviewer.md  17-citation-and-fact-auditor.md  18-reference-implementation-engineer.md  19-concurrency-reviewer.md
apps/bench/: CMakeLists.txt  main.cpp
apps/replay/: CMakeLists.txt  main.cpp  tape_gen.cpp
apps/server/: CMakeLists.txt  main.cpp
bench/: baseline.json  check_regression.py  last-run.json
design-mockups/: index.html
design-mockups/themes/: bourse.html  eikon.html  onyx.html  terminal.html
docs/: architecture.md  plan.md  setup-guide.md
docs/adr/: 0001-cpp20-library-plus-drivers.md  0002-cross-symbol-cancel.md  0003-seqlock-for-top-of-book.md  0004-cloudflare-pages-and-fly-io.md  0005-extended-snapshot-payload.md
docs/audits/: citation-audit-2026-05-09.md  citation-audit-phase-1-2026-05-09.md
docs/design/: canonical.html  tokens.md  wireframes.md
docs/perf/: budget.md
docs/qa/: regression-checklist.md
docs/risk/: audit-cases.md  matching-semantics.md
docs/security/: checklist.md  secrets.md  threat-model.md
docs/superpowers/plans/: 2026-05-09-phase-1-single-symbol-matching.md  2026-05-09-phase-2-multi-instrument-and-cancel.md
docs/superpowers/specs/: 2026-05-09-meridian-design.md
frontend/: .env.production  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/scripts/: smoke.mjs
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ConnectionBanner.tsx  DepthChart.tsx  Footer.tsx  Header.tsx  Hero.tsx  Ladder.tsx  PerfPanel.tsx  SectionHead.tsx  Tape.tsx
frontend/src/hooks/: useDisplayThrottle.ts  useMeridianStream.ts
frontend/src/lib/: build.ts  format.ts  symbols.ts
frontend/src/store/: dashboard.test.ts  dashboard.ts
frontend/src/ws/: client.test.ts  client.ts
include/meridian/: book.hpp  book_registry.hpp  depth_snapshot.hpp  execution_report.hpp  itch.hpp  latency_histogram.hpp  level.hpp  matching.hpp  order_index.hpp  order_pool.hpp  seqlock_snapshot.hpp  trade_print.hpp  types.hpp  ws_handshake.hpp  ws_server.hpp
src/: CMakeLists.txt  book.cpp  book_registry.cpp  level.cpp  matching.cpp  order_index.cpp  order_pool.cpp  ws_server.cpp
tests/: CMakeLists.txt
tests/concurrency/: CMakeLists.txt  test_latency_histogram_concurrent.cpp  test_seqlock_concurrent.cpp  test_seqlock_depth_concurrent.cpp  test_trade_ring_concurrent.cpp
tests/integration/: CMakeLists.txt  audit_capture.cpp  test_engine_vs_reference.cpp  test_itch_replay.cpp  test_multi_instrument.cpp  test_trade_aggregation.cpp  test_ws_smoke.cpp
tests/property/: CMakeLists.txt  harness.hpp  test_differential.cpp  test_invariants.cpp
tests/reference/: README.md  itch_parser.py  itch_replay.py  matching_reference.py  run_reference.py  test_reference.py
tests/unit/: CMakeLists.txt  test_book.cpp  test_book_depth_cache.cpp  test_book_registry.cpp  test_depth_snapshot.cpp  test_itch.cpp  test_latency_histogram.cpp  test_level.cpp  test_matching.cpp  test_order_index.cpp  test_order_pool.cpp  test_seqlock_snapshot.cpp  test_trade_ring.cpp  test_ws_handshake.cpp  test_ws_origin.cpp
